fix: add increased space to button on mobile

--- a/sass/directives/_accents.scss
+++ b/sass/directives/_accents.scss
@@ -95,6 +95,6 @@
   }
 
   @media only screen and (max-width: $small-screen-max) {
-    display: none;
+    bottom: 3em;
   }
 }
